# metabricks

./: .gitignore  README.md  pyproject.toml
examples/: WRITE_OPTIONS_EXAMPLES.md  databricks_notebook_examples.md  orchestrator_runtime_usage.py  pipeline_batch_overwrite.json  pipeline_cdc_append.json  pipeline_continuous_streaming.json  pipeline_minimal.json  pipeline_partition_replace.json  pipeline_scheduled_microbatch.json  pipeline_streaming_kafka.json  pipeline_volume_append.json  pipeline_with_audit_metadata.json
scripts/: build-production-wheel.sh
tests/: test_api_auth.py  test_api_batch_connector.py  test_api_registry_integration.py  test_api_secrets_provider.py  test_api_wiring.py  test_asset_identifiers.py  test_column_normalizer.py  test_connector_registry.py  test_databricks_batch_connector.py  test_databricks_batch_connector_path.py  test_databricks_sink.py  test_databricks_streaming_connector.py  test_delta_write_options.py  test_delta_writer_partition_templates.py  test_functional_events.py  test_kafka_streaming_connector.py  test_memory_jsonl_observer.py  test_metadata_orchestrator.py  test_orchestrator.py  test_orchestrator_api_batch.py  test_orchestrator_databricks_batch.py  test_orchestrator_write_options_integration.py  test_pipeline_api_to_databricks_uc_volume_json.py  test_pipeline_api_to_databricks_volume_json.py  test_pipeline_databricks_uc_to_uc_json.py  test_pipeline_databricks_uc_to_volume_delta_json.py  test_pipeline_databricks_volume_streaming_to_uc_delta_json.py  test_sink_config_write_options.py  test_source_config.py  (+6 more)
(+64 files in other folders)
