[project]
name = "metabricks"
version = "0.1.0"
description = "MetaBricks - Production-ready connectors and sinks for Databricks"

readme = "README.md"
requires-python = ">=3.12"

# RUNTIME ONLY - Minimal dependencies (Databricks provides: pyspark, delta, java, hadoop)
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytz>=2025.2",
    "tenacity>=9.1.2",
]

# OPTIONAL - Dependencies provided by Databricks environment (don't bundle in wheel)
[project.optional-dependencies]
databricks = [
    "pyspark==4.0.0",  # Pre-installed in Databricks runtime
    # "delta>=3.0.0",     # Pre-installed via Databricks runtime
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "pyspark==4.0.0",   # Needed for local testing
    # "delta>=3.0.0",     # Needed for local testing
]

# CLI entry points for direct execution
[project.scripts]
metabricks-run = "metabricks.cli:cli"
metabricks-validate = "metabricks.cli:validate_config"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_level = "DEBUG"
addopts = "--tb=short -m 'not integration'"
markers = [
    "integration: marks tests as integration tests that require external services (deselect with '-m \"not integration\"')",
]


